# strata

./: .gitattributes  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.claude/: settings.json
.claude/commands/: next.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  idea.md
.github/workflows/: ci.yml
archaeology/decisions/: 0001-files-are-canonical.md  0002-stable-identity-and-display-sequence.md  0003-payload-format-is-not-the-artifact-model.md  0004-machine-readable-error-contract.md  0005-repository-marker-and-init-safety.md  0006-reference-model.md  0007-interaction-surfaces.md  0008-mutation-failure-classes.md  0009-dual-mit-apache-licensing.md  0010-reference-syntax.md  0011-flat-placement.md  0012-canonical-representation.md  0013-degraded-corpus-operability.md  0014-lf-line-ending-policy.md  0015-concurrent-active-sprints.md
archaeology/dragons/: 0002-repository-validity-not-closed-under-git-round-trip.md  0003-reference-marker-syntax-and-typed-edge-vocabulary.md  0004-power-loss-durability-of-mutations.md
archaeology/ideas/: 0002-doctor-reference-graph-checks.md  0009-single-invocation-commits.md  0010-declarative-collection-specs.md  (+12 more)
scripts/: README.md  bootstrap-inception.sh  check.sh
src/: artifact.rs  cli.rs  doctor.rs  edges.rs  error.rs  fortune.rs  lib.rs  main.rs  read.rs  repo.rs  transition.rs
tests/: cli.rs  degraded.rs  doctor.rs  fortune.rs  ideas.rs  init.rs  line_endings.rs  list_show.rs  new.rs  provenance.rs  sprints.rs  tasks.rs  transition.rs
(+99 files in other folders)
