[package]
name = "strata"
version = "0.1.0"
edition = "2024"
description = "Git-friendly project archaeology and structured repository memory for humans and coding agents"
repository = "https://github.com/henry-filgueiras/strata"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
jiff = "0.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_yaml_ng = "0.10.0"
tempfile = "3"
thiserror = "2"
toml = "0.9"
ulid = "1"
